// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerHeader component should match snapshot - DrawerHeader Avatar Image: DrawerHeader with Image Avatar snapshot 1`] = `
<div
  className="sc-bdVaJa jDYmUm"
>
  <div
    className="MuiAvatar-root MuiAvatar-circle sc-bwzfXH LdbJt"
    size="large"
    style={
      Object {
        "fontSize": "1rem",
        "height": "48px",
        "width": "48px",
      }
    }
    theme={
      Object {
        "avatarSizes": Object {
          "huge": Object {
            "fontSize": "1.5rem",
            "size": 80,
          },
          "large": Object {
            "fontSize": "1rem",
            "size": 48,
          },
          "small": Object {
            "fontSize": ".875rem",
            "size": 32,
          },
          "standard": Object {
            "fontSize": "1rem",
            "size": 40,
          },
          "tiny": Object {
            "fontSize": ".625rem",
            "size": 24,
          },
        },
        "breakpoints": Object {
          "between": [Function],
          "down": [Function],
          "keys": Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ],
          "only": [Function],
          "up": [Function],
          "values": Object {
            "lg": 1280,
            "md": 960,
            "sm": 600,
            "xl": 1920,
            "xs": 0,
          },
          "width": [Function],
        },
        "buttonSizes": Object {
          "large": Object {
            "height": 48,
            "paddingBottom": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 0,
          },
          "medium": Object {
            "height": 40,
            "paddingBottom": 0,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 0,
          },
          "small": Object {
            "height": 32,
            "paddingBottom": 0,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 0,
          },
        },
        "direction": "ltr",
        "iconSizes": Object {
          "huge": 144,
          "hugex": 192,
          "hugexx": 256,
          "large": 72,
          "largex": 96,
          "largexx": 128,
          "medium": 64,
          "micro": 16,
          "small": 32,
          "standard": 48,
          "tiny": 24,
        },
        "mixins": Object {
          "gutters": [Function],
          "toolbar": Object {
            "@media (min-width:0px) and (orientation: landscape)": Object {
              "minHeight": 48,
            },
            "@media (min-width:600px)": Object {
              "minHeight": 64,
            },
            "minHeight": 56,
          },
        },
        "overrides": Object {
          "MuiAlert": Object {
            "filledInfo": Object {
              "backgroundColor": "#227BBD",
            },
            "filledWarning": Object {
              "backgroundColor": "#FCC433",
              "color": "#333333",
            },
            "icon": Object {
              "marginRight": 8,
            },
            "message": Object {
              "padding": "5px 0",
            },
            "outlinedError": Object {
              "color": "#333333",
            },
            "outlinedInfo": Object {
              "& .MuiAlert-icon": Object {
                "color": "#227BBD",
              },
              "borderColor": "#227BBD",
              "color": "#333333",
            },
            "outlinedSuccess": Object {
              "color": "#333333",
            },
            "outlinedWarning": Object {
              "& .MuiAlert-icon": Object {
                "color": "#FCC433",
              },
              "borderColor": "#FCC433",
              "color": "#333333",
            },
            "root": Object {
              "fontSize": "1rem",
              "fontWeight": 400,
              "padding": 16,
              "width": 278,
            },
            "standardError": Object {
              "backgroundColor": "rgba(231, 70, 39, 0.16)",
              "color": "#333333",
            },
            "standardInfo": Object {
              "& .MuiAlert-icon": Object {
                "color": "#227BBD",
              },
              "backgroundColor": "rgba(34, 123, 189, 0.16)",
              "color": "#333333",
            },
            "standardSuccess": Object {
              "backgroundColor": "rgba(86, 154, 50, 0.16)",
              "color": "#333333",
            },
            "standardWarning": Object {
              "& .MuiAlert-icon": Object {
                "color": "#FCC433",
              },
              "backgroundColor": "rgba(252, 196, 51, 0.16)",
              "color": "#333333",
            },
          },
          "MuiAlertTitle": Object {
            "root": Object {
              "fontSize": "1.25rem",
              "fontWeight": 600,
            },
          },
          "MuiAvatar": Object {
            "colorDefault": Object {
              "color": "#333333",
            },
          },
          "MuiBadge": Object {
            "badge": Object {
              "padding": "0 4px",
            },
          },
          "MuiButton": Object {
            "contained": Object {
              "&.Mui-disabled": Object {
                "backgroundColor": "#00000014",
                "color": "#0000003D",
              },
            },
            "outlined": Object {
              "&.Mui-disabled": Object {
                "borderColor": "#0000003D",
                "color": "#0000003D",
              },
              "borderColor": "#0000003D",
              "padding": null,
            },
            "outlinedPrimary": Object {
              "color": "#333333",
            },
            "outlinedSecondary": Object {
              "&.Mui-disabled": Object {
                "borderColor": "#0000003D",
              },
              "color": "#333333",
            },
            "root": Object {
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "height": 40,
              "paddingBottom": 0,
              "paddingLeft": 12,
              "paddingRight": 12,
              "paddingTop": 0,
            },
            "sizeLarge": Object {
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "height": 48,
              "paddingBottom": 0,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 0,
            },
            "sizeSmall": Object {
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "height": 32,
              "paddingBottom": 0,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 0,
            },
            "text": Object {
              "&.Mui-disabled": Object {
                "borderColor": "#0000003D",
                "color": "#0000003D",
              },
              "padding": null,
            },
          },
          "MuiButtonGroup": Object {
            "groupedContainedHorizontal": Object {
              "&:not(:last-child)": Object {
                "&.Mui-disabled": Object {
                  "borderColor": "#0000003D",
                },
                "borderRightColor": "#0000001F",
              },
            },
            "groupedContainedPrimary": Object {
              "&:not(:last-child)": Object {
                "&.Mui-disabled": Object {
                  "borderColor": "#0000003D",
                },
                "borderColor": "#EF8426",
              },
            },
            "groupedContainedSecondary": Object {
              "&:not(:last-child)": Object {
                "&.Mui-disabled": Object {
                  "borderColor": "#0000003D",
                },
                "borderColor": "#FF5808",
              },
            },
            "groupedTextHorizontal": Object {
              "&:not(:last-child)": Object {
                "&.Mui-disabled": Object {
                  "borderColor": "#0000003D",
                },
                "borderRightColor": "#0000001F",
              },
            },
            "groupedTextPrimary": Object {
              "&:not(:last-child).Mui-disabled": Object {
                "borderColor": "#0000003D",
              },
            },
            "groupedTextSecondary": Object {
              "&:not(:last-child).Mui-disabled": Object {
                "borderColor": "#0000003D",
              },
            },
          },
          "MuiChip": Object {
            "clickableColorPrimary": Object {
              "&:hover": Object {
                "backgroundColor": "#EF8426",
              },
            },
            "clickableColorSecondary": Object {
              "&:hover": Object {
                "backgroundColor": "#EF8426",
              },
            },
            "deleteIcon": Object {
              "&:hover": Object {
                "color": "#000000",
              },
              "color": "rgba(0, 0, 0, 0.8)",
              "fontSize": "24px",
              "height": "24px",
              "width": "24px",
            },
            "deleteIconColorPrimary": Object {
              "&:hover": Object {
                "color": "#FFFFFF",
              },
              "color": "rgba(255, 255, 255, 0.8)",
            },
            "deleteIconColorSecondary": Object {
              "&:hover": Object {
                "color": "#FFFFFF",
              },
              "color": "rgba(255, 255, 255, 0.8)",
            },
            "deleteIconSmall": Object {
              "fontSize": "16px",
              "height": "16px",
              "width": "16px",
            },
            "icon": Object {
              "fontSize": "24px",
            },
            "iconSmall": Object {
              "fontSize": "16px",
              "height": "16px",
              "marginTop": "1px",
              "width": "16px",
            },
            "outlined": Object {
              "borderColor": "rgba(0, 0, 0, 0.12)",
              "color": "#000000",
            },
            "outlinedPrimary": Object {
              "color": "#000000",
            },
            "outlinedSecondary": Object {
              "color": "#000000",
            },
            "root": Object {
              "& $avatar": Object {
                "backgroundColor": "rgba(0, 0, 0, 0.24)",
                "color": "#333333",
              },
              "&$disabled": Object {
                "opacity": 0.4,
              },
              "backgroundColor": "rgba(0, 0, 0, 0.12)",
              "color": "#333333",
              "fontSize": "0.875rem",
            },
          },
          "MuiExpansionPanel": Object {
            "root": Object {
              "&$disabled": Object {
                "backgroundColor": "#FFFFFF",
                "opacity": 0.32,
              },
              "&$expanded": Object {
                "borderColor": "#F4AB34",
              },
              "border": "transparent 1px solid",
            },
          },
          "MuiExpansionPanelSummary": Object {
            "root": Object {
              "&$disabled": Object {
                "opacity": 1,
              },
              "alignItems": "flex-start",
              "marginTop": "8px",
            },
          },
          "MuiFormLabel": Object {
            "formControl": Object {
              "marginTop": "-4px",
              "transform": "none",
            },
            "root": Object {
              "&.Mui-error": Object {
                "color": "#E74627",
              },
              "&.Mui-focused": Object {
                "color": "#777777",
                "fontSize": "0.875rem",
              },
              "fontSize": "0.875rem",
            },
          },
          "MuiIconButton": Object {
            "root": Object {
              "color": "#333333",
              "padding": "8px",
            },
            "sizeSmall": Object {
              "padding": "4px",
            },
          },
          "MuiInputAdornment": Object {
            "positionEnd": Object {
              "marginRight": 8,
            },
            "root": Object {
              "position": "absolute",
              "right": "0",
            },
          },
          "MuiInputBase": Object {
            "input": Object {
              "&.Mui-disabled": Object {
                "opacity": 0.24,
              },
              "color": "#333333",
            },
            "root": Object {
              "&.Mui-focused:not(.MuiError):not(.MuiSuccess)": Object {
                "boxShadow": "#F4AB34 0 0 0 2px",
              },
              "&.MuiError": Object {
                "&.Mui-focused": Object {
                  "boxShadow": "#E74627 0 0 0 2px",
                },
                "&:hover": Object {
                  "boxShadow": "#777777 0 0 0 1px",
                },
                "boxShadow": "#E74627 0 0 0 2px",
              },
              "&.MuiFilled:not(.Mui-focused)": Object {
                "&:hover": Object {
                  "boxShadow": "#777777 0 0 0 1px",
                },
                "boxShadow": "#333333 0 0 0 1px",
              },
              "&.MuiInput-underline.Mui-disabled:before": Object {
                "borderBottomStyle": "none",
              },
              "&.MuiInput-underline:after": Object {
                "borderBottom": "none",
              },
              "&.MuiInput-underline:before": Object {
                "borderBottom": "none",
              },
              "&.MuiInput-underline:hover:not(.Mui-disabled):before": Object {
                "borderBottom": "none",
              },
              "&.MuiSuccess": Object {
                "&.Mui-focused": Object {
                  "boxShadow": "#569A32 0 0 0 1px",
                },
                "&:hover": Object {
                  "boxShadow": "#777777 0 0 0 1px",
                },
                "boxShadow": "#569A32 0 0 0 1px",
              },
              "&:hover": Object {
                "boxShadow": "#777777 0 0 0 1px",
              },
              "&:hover.Mui-disabled": Object {
                "boxShadow": "#BBBBBB 0 0 0 1px",
              },
              "borderRadius": "4px",
              "boxShadow": "#BBBBBB 0 0 0 1px",
              "color": "#333333",
              "padding": "12px",
            },
          },
          "MuiInputLabel": Object {
            "formControl": Object {
              "marginTop": "-4px",
              "transform": "none",
            },
            "shrink": Object {
              "marginTop": "-4px",
              "transform": "none",
            },
          },
          "MuiListItem": Object {
            "button": Object {
              "&:hover": Object {
                "backgroundColor": "rgba(0, 0, 0, 0.04)",
              },
            },
            "gutters": Object {
              "&:focus": Object {
                "outline": "none",
              },
            },
            "root": Object {
              "&$selected": Object {
                "&:focus": Object {
                  "outline": "none",
                },
                "&:hover": Object {
                  "backgroundColor": "rgba(0, 0, 0, 0.04)",
                },
                "backgroundColor": "rgba(255, 107, 11, 0.16)",
              },
              "&.Mui-disabled": Object {
                "opacity": 0.32,
              },
              "&:hover": Object {
                "backgroundColor": "rgba(0, 0, 0, 0.04)",
              },
              "cursor": "pointer",
            },
          },
          "MuiSelect": Object {
            "select": Object {
              "&.Mui-disabled": Object {
                "color": "#BBBBBB",
              },
              "&:focus": Object {
                "backgroundColor": "transparent",
              },
            },
          },
          "MuiTab": Object {
            "root": Object {
              "&$disabled": Object {
                "opacity": 0.24,
              },
            },
            "textColorInherit": Object {
              "&$disabled": Object {
                "opacity": 0.24,
              },
            },
            "wrapper": Object {
              "& > *:first-child": Object {
                "marginBottom": "2px !important",
              },
            },
          },
          "MuiTextField": Object {
            "& .MuiInputLabel": Object {
              "marginTop": "20px",
            },
          },
          "MuiToolbar": Object {
            "dense": Object {
              "@media (min-width: 600px)": Object {
                "minHeight": "56px",
              },
              "minHeight": "56px",
            },
            "gutters": Object {
              "@media (min-width: 600px)": Object {
                "padding": "0 16px",
              },
              "padding": "0 16px",
            },
            "regular": Object {
              "@media (min-width: 600px)": Object {
                "minHeight": "56px",
              },
              "minHeight": "56px",
            },
            "root": Object {
              "@media (min-width: 600px)": Object {
                "padding": "0 16px",
              },
              "padding": "0 16px",
            },
          },
        },
        "palette": Object {
          "action": Object {
            "active": "rgba(0, 0, 0, 0.54)",
            "disabled": "rgba(51, 51, 51, 0.24)",
            "disabledBackground": "rgba(0, 0, 0, 0.12)",
            "hover": "rgba(0, 0, 0, 0.08)",
            "hoverOpacity": 0.08,
            "selected": "rgba(0, 0, 0, 0.14)",
          },
          "augmentColor": [Function],
          "background": Object {
            "default": "#FAFAFA",
            "defaultContrastText": "#333333",
            "paper": "#FFFFFF",
            "paperContrastText": "#333333",
          },
          "common": Object {
            "black": "#000",
            "white": "#fff",
          },
          "complementary": Object {
            "highlight": "#000000",
            "link": "#227BBD",
            "linkContrastText": "#FFFFFF",
            "warning": "#FCC433",
            "warningContrastText": "#333333",
          },
          "contrastThreshold": 3,
          "divider": "rgba(0, 0, 0, 0.12)",
          "error": Object {
            "contrastText": "#FFFFFF",
            "dark": "rgb(161, 49, 27)",
            "light": "rgb(235, 107, 82)",
            "main": "#E74627",
          },
          "getContrastText": [Function],
          "grey": Object {
            "100": "#f5f5f5",
            "200": "#eeeeee",
            "300": "#e0e0e0",
            "400": "#bdbdbd",
            "50": "#fafafa",
            "500": "#9e9e9e",
            "600": "#757575",
            "700": "#616161",
            "800": "#424242",
            "900": "#212121",
            "A100": "#d5d5d5",
            "A200": "#aaaaaa",
            "A400": "#303030",
            "A700": "#616161",
          },
          "info": Object {
            "contrastText": "#fff",
            "dark": "#1976d2",
            "light": "#64b5f6",
            "main": "#2196f3",
          },
          "primary": Object {
            "contrastText": "#333333",
            "dark": "#EF8426",
            "light": "#FEFDE8",
            "main": "#F4AB34",
          },
          "secondary": Object {
            "contrastText": "#000000",
            "dark": "#FF5808",
            "light": "#FFF8E1",
            "main": "#FF6B0B",
          },
          "success": Object {
            "contrastText": "#FFFFFF",
            "dark": "rgb(60, 107, 35)",
            "light": "rgb(119, 174, 91)",
            "main": "#569A32",
          },
          "text": Object {
            "disabled": "#BBBBBB",
            "hint": "#BBBBBB",
            "primary": "#333333",
            "secondary": "#777777",
          },
          "tonalOffset": 0.2,
          "type": "light",
          "warning": Object {
            "contrastText": "rgba(0, 0, 0, 0.87)",
            "dark": "#f57c00",
            "light": "#ffb74d",
            "main": "#ff9800",
          },
        },
        "props": Object {},
        "shadows": Array [
          "none",
          "0 1px 1px 0 rgba(0, 0, 0, 0.14)",
          "0 2px 2px 0 rgba(0, 0, 0, 0.14)",
          "0 3px 4px 0 rgba(0, 0, 0, 0.14)",
          "0 4px 5px 0 rgba(0, 0, 0, 0.14)",
          "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
          "0 6px 10px 0 rgba(0, 0, 0, 0.14)",
          "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
          "0 8px 10px 0 rgba(0, 0, 0, 0.14)",
          "0 9px 12px 0 rgba(0, 0, 0, 0.14)",
          "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
          "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
          "0 12px 17px 0 rgba(0, 0, 0, 0.14)",
          "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
          "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
          "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
          "0 16px 24px 0 rgba(0, 0, 0, 0.14)",
          "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
          "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
          "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
          "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
          "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
          "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
          "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
          "0 24px 38px 0 rgba(0, 0, 0, 0.14)",
        ],
        "shape": Object {
          "badgeBorderRadius": 100,
          "borderRadius": 4,
        },
        "sizes": Object {
          "huge": 96,
          "hugex": 128,
          "hugexx": 144,
          "hugexxx": 192,
          "large": 64,
          "largex": 72,
          "largexx": 80,
          "largexxx": 88,
          "medium": 48,
          "mediumx": 56,
          "micro": 4,
          "none": 0,
          "semi": 32,
          "semix": 40,
          "small": 16,
          "standard": 24,
          "tiny": 8,
          "veryhuge": 256,
        },
        "spacing": [Function],
        "transitions": Object {
          "create": [Function],
          "duration": Object {
            "complex": 375,
            "enteringScreen": 225,
            "leavingScreen": 195,
            "short": 250,
            "shorter": 200,
            "shortest": 150,
            "standard": 300,
          },
          "easing": Object {
            "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
            "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
            "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
            "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
          },
          "getAutoHeightDuration": [Function],
        },
        "typography": Object {
          "body1": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
            "lineHeight": 1.5,
          },
          "body2": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "0.875rem",
            "fontWeight": 400,
            "lineHeight": 1.43,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "0.875rem",
            "fontWeight": 600,
            "lineHeight": 1.75,
            "textTransform": "uppercase",
          },
          "caption": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "0.75rem",
            "fontWeight": 400,
            "lineHeight": 1.66,
          },
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontSize": 14,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
          "h1": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "6rem",
            "fontWeight": 300,
            "lineHeight": 1.167,
          },
          "h2": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "3.75rem",
            "fontWeight": 300,
            "lineHeight": 1.2,
          },
          "h3": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "3rem",
            "fontWeight": 400,
            "lineHeight": 1.167,
          },
          "h4": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "2.125rem",
            "fontWeight": 400,
            "lineHeight": 1.235,
          },
          "h5": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1.5rem",
            "fontWeight": 400,
            "lineHeight": 1.334,
          },
          "h6": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1.25rem",
            "fontWeight": 600,
            "lineHeight": 1.6,
          },
          "htmlFontSize": 16,
          "overline": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "0.75rem",
            "fontWeight": 400,
            "lineHeight": 2.66,
            "textTransform": "uppercase",
          },
          "pxToRem": [Function],
          "round": [Function],
          "subtitle1": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
            "lineHeight": 1.75,
          },
          "subtitle2": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "0.875rem",
            "fontWeight": 500,
            "lineHeight": 1.57,
          },
        },
        "zIndex": Object {
          "appBar": 1100,
          "drawer": 1200,
          "mobileStepper": 1000,
          "modal": 1300,
          "snackbar": 1400,
          "speedDial": 1050,
          "tooltip": 1500,
        },
      }
    }
  >
    <img
      className="MuiAvatar-img"
      src="some_image"
    />
  </div>
</div>
`;

exports[`DrawerHeader component should match snapshot - DrawerHeader Avatar Text: DrawerHeader with Text Avatar snapshot 1`] = `
<div
  className="sc-bdVaJa jDYmUm"
>
  <div
    className="MuiAvatar-root MuiAvatar-circle sc-bwzfXH LdbJt MuiAvatar-colorDefault"
    size="large"
    style={
      Object {
        "fontSize": "1rem",
        "height": "48px",
        "width": "48px",
      }
    }
    theme={
      Object {
        "avatarSizes": Object {
          "huge": Object {
            "fontSize": "1.5rem",
            "size": 80,
          },
          "large": Object {
            "fontSize": "1rem",
            "size": 48,
          },
          "small": Object {
            "fontSize": ".875rem",
            "size": 32,
          },
          "standard": Object {
            "fontSize": "1rem",
            "size": 40,
          },
          "tiny": Object {
            "fontSize": ".625rem",
            "size": 24,
          },
        },
        "breakpoints": Object {
          "between": [Function],
          "down": [Function],
          "keys": Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ],
          "only": [Function],
          "up": [Function],
          "values": Object {
            "lg": 1280,
            "md": 960,
            "sm": 600,
            "xl": 1920,
            "xs": 0,
          },
          "width": [Function],
        },
        "buttonSizes": Object {
          "large": Object {
            "height": 48,
            "paddingBottom": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 0,
          },
          "medium": Object {
            "height": 40,
            "paddingBottom": 0,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 0,
          },
          "small": Object {
            "height": 32,
            "paddingBottom": 0,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 0,
          },
        },
        "direction": "ltr",
        "iconSizes": Object {
          "huge": 144,
          "hugex": 192,
          "hugexx": 256,
          "large": 72,
          "largex": 96,
          "largexx": 128,
          "medium": 64,
          "micro": 16,
          "small": 32,
          "standard": 48,
          "tiny": 24,
        },
        "mixins": Object {
          "gutters": [Function],
          "toolbar": Object {
            "@media (min-width:0px) and (orientation: landscape)": Object {
              "minHeight": 48,
            },
            "@media (min-width:600px)": Object {
              "minHeight": 64,
            },
            "minHeight": 56,
          },
        },
        "overrides": Object {
          "MuiAlert": Object {
            "filledInfo": Object {
              "backgroundColor": "#227BBD",
            },
            "filledWarning": Object {
              "backgroundColor": "#FCC433",
              "color": "#333333",
            },
            "icon": Object {
              "marginRight": 8,
            },
            "message": Object {
              "padding": "5px 0",
            },
            "outlinedError": Object {
              "color": "#333333",
            },
            "outlinedInfo": Object {
              "& .MuiAlert-icon": Object {
                "color": "#227BBD",
              },
              "borderColor": "#227BBD",
              "color": "#333333",
            },
            "outlinedSuccess": Object {
              "color": "#333333",
            },
            "outlinedWarning": Object {
              "& .MuiAlert-icon": Object {
                "color": "#FCC433",
              },
              "borderColor": "#FCC433",
              "color": "#333333",
            },
            "root": Object {
              "fontSize": "1rem",
              "fontWeight": 400,
              "padding": 16,
              "width": 278,
            },
            "standardError": Object {
              "backgroundColor": "rgba(231, 70, 39, 0.16)",
              "color": "#333333",
            },
            "standardInfo": Object {
              "& .MuiAlert-icon": Object {
                "color": "#227BBD",
              },
              "backgroundColor": "rgba(34, 123, 189, 0.16)",
              "color": "#333333",
            },
            "standardSuccess": Object {
              "backgroundColor": "rgba(86, 154, 50, 0.16)",
              "color": "#333333",
            },
            "standardWarning": Object {
              "& .MuiAlert-icon": Object {
                "color": "#FCC433",
              },
              "backgroundColor": "rgba(252, 196, 51, 0.16)",
              "color": "#333333",
            },
          },
          "MuiAlertTitle": Object {
            "root": Object {
              "fontSize": "1.25rem",
              "fontWeight": 600,
            },
          },
          "MuiAvatar": Object {
            "colorDefault": Object {
              "color": "#333333",
            },
          },
          "MuiBadge": Object {
            "badge": Object {
              "padding": "0 4px",
            },
          },
          "MuiButton": Object {
            "contained": Object {
              "&.Mui-disabled": Object {
                "backgroundColor": "#00000014",
                "color": "#0000003D",
              },
            },
            "outlined": Object {
              "&.Mui-disabled": Object {
                "borderColor": "#0000003D",
                "color": "#0000003D",
              },
              "borderColor": "#0000003D",
              "padding": null,
            },
            "outlinedPrimary": Object {
              "color": "#333333",
            },
            "outlinedSecondary": Object {
              "&.Mui-disabled": Object {
                "borderColor": "#0000003D",
              },
              "color": "#333333",
            },
            "root": Object {
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "height": 40,
              "paddingBottom": 0,
              "paddingLeft": 12,
              "paddingRight": 12,
              "paddingTop": 0,
            },
            "sizeLarge": Object {
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "height": 48,
              "paddingBottom": 0,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 0,
            },
            "sizeSmall": Object {
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "height": 32,
              "paddingBottom": 0,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 0,
            },
            "text": Object {
              "&.Mui-disabled": Object {
                "borderColor": "#0000003D",
                "color": "#0000003D",
              },
              "padding": null,
            },
          },
          "MuiButtonGroup": Object {
            "groupedContainedHorizontal": Object {
              "&:not(:last-child)": Object {
                "&.Mui-disabled": Object {
                  "borderColor": "#0000003D",
                },
                "borderRightColor": "#0000001F",
              },
            },
            "groupedContainedPrimary": Object {
              "&:not(:last-child)": Object {
                "&.Mui-disabled": Object {
                  "borderColor": "#0000003D",
                },
                "borderColor": "#EF8426",
              },
            },
            "groupedContainedSecondary": Object {
              "&:not(:last-child)": Object {
                "&.Mui-disabled": Object {
                  "borderColor": "#0000003D",
                },
                "borderColor": "#FF5808",
              },
            },
            "groupedTextHorizontal": Object {
              "&:not(:last-child)": Object {
                "&.Mui-disabled": Object {
                  "borderColor": "#0000003D",
                },
                "borderRightColor": "#0000001F",
              },
            },
            "groupedTextPrimary": Object {
              "&:not(:last-child).Mui-disabled": Object {
                "borderColor": "#0000003D",
              },
            },
            "groupedTextSecondary": Object {
              "&:not(:last-child).Mui-disabled": Object {
                "borderColor": "#0000003D",
              },
            },
          },
          "MuiChip": Object {
            "clickableColorPrimary": Object {
              "&:hover": Object {
                "backgroundColor": "#EF8426",
              },
            },
            "clickableColorSecondary": Object {
              "&:hover": Object {
                "backgroundColor": "#EF8426",
              },
            },
            "deleteIcon": Object {
              "&:hover": Object {
                "color": "#000000",
              },
              "color": "rgba(0, 0, 0, 0.8)",
              "fontSize": "24px",
              "height": "24px",
              "width": "24px",
            },
            "deleteIconColorPrimary": Object {
              "&:hover": Object {
                "color": "#FFFFFF",
              },
              "color": "rgba(255, 255, 255, 0.8)",
            },
            "deleteIconColorSecondary": Object {
              "&:hover": Object {
                "color": "#FFFFFF",
              },
              "color": "rgba(255, 255, 255, 0.8)",
            },
            "deleteIconSmall": Object {
              "fontSize": "16px",
              "height": "16px",
              "width": "16px",
            },
            "icon": Object {
              "fontSize": "24px",
            },
            "iconSmall": Object {
              "fontSize": "16px",
              "height": "16px",
              "marginTop": "1px",
              "width": "16px",
            },
            "outlined": Object {
              "borderColor": "rgba(0, 0, 0, 0.12)",
              "color": "#000000",
            },
            "outlinedPrimary": Object {
              "color": "#000000",
            },
            "outlinedSecondary": Object {
              "color": "#000000",
            },
            "root": Object {
              "& $avatar": Object {
                "backgroundColor": "rgba(0, 0, 0, 0.24)",
                "color": "#333333",
              },
              "&$disabled": Object {
                "opacity": 0.4,
              },
              "backgroundColor": "rgba(0, 0, 0, 0.12)",
              "color": "#333333",
              "fontSize": "0.875rem",
            },
          },
          "MuiExpansionPanel": Object {
            "root": Object {
              "&$disabled": Object {
                "backgroundColor": "#FFFFFF",
                "opacity": 0.32,
              },
              "&$expanded": Object {
                "borderColor": "#F4AB34",
              },
              "border": "transparent 1px solid",
            },
          },
          "MuiExpansionPanelSummary": Object {
            "root": Object {
              "&$disabled": Object {
                "opacity": 1,
              },
              "alignItems": "flex-start",
              "marginTop": "8px",
            },
          },
          "MuiFormLabel": Object {
            "formControl": Object {
              "marginTop": "-4px",
              "transform": "none",
            },
            "root": Object {
              "&.Mui-error": Object {
                "color": "#E74627",
              },
              "&.Mui-focused": Object {
                "color": "#777777",
                "fontSize": "0.875rem",
              },
              "fontSize": "0.875rem",
            },
          },
          "MuiIconButton": Object {
            "root": Object {
              "color": "#333333",
              "padding": "8px",
            },
            "sizeSmall": Object {
              "padding": "4px",
            },
          },
          "MuiInputAdornment": Object {
            "positionEnd": Object {
              "marginRight": 8,
            },
            "root": Object {
              "position": "absolute",
              "right": "0",
            },
          },
          "MuiInputBase": Object {
            "input": Object {
              "&.Mui-disabled": Object {
                "opacity": 0.24,
              },
              "color": "#333333",
            },
            "root": Object {
              "&.Mui-focused:not(.MuiError):not(.MuiSuccess)": Object {
                "boxShadow": "#F4AB34 0 0 0 2px",
              },
              "&.MuiError": Object {
                "&.Mui-focused": Object {
                  "boxShadow": "#E74627 0 0 0 2px",
                },
                "&:hover": Object {
                  "boxShadow": "#777777 0 0 0 1px",
                },
                "boxShadow": "#E74627 0 0 0 2px",
              },
              "&.MuiFilled:not(.Mui-focused)": Object {
                "&:hover": Object {
                  "boxShadow": "#777777 0 0 0 1px",
                },
                "boxShadow": "#333333 0 0 0 1px",
              },
              "&.MuiInput-underline.Mui-disabled:before": Object {
                "borderBottomStyle": "none",
              },
              "&.MuiInput-underline:after": Object {
                "borderBottom": "none",
              },
              "&.MuiInput-underline:before": Object {
                "borderBottom": "none",
              },
              "&.MuiInput-underline:hover:not(.Mui-disabled):before": Object {
                "borderBottom": "none",
              },
              "&.MuiSuccess": Object {
                "&.Mui-focused": Object {
                  "boxShadow": "#569A32 0 0 0 1px",
                },
                "&:hover": Object {
                  "boxShadow": "#777777 0 0 0 1px",
                },
                "boxShadow": "#569A32 0 0 0 1px",
              },
              "&:hover": Object {
                "boxShadow": "#777777 0 0 0 1px",
              },
              "&:hover.Mui-disabled": Object {
                "boxShadow": "#BBBBBB 0 0 0 1px",
              },
              "borderRadius": "4px",
              "boxShadow": "#BBBBBB 0 0 0 1px",
              "color": "#333333",
              "padding": "12px",
            },
          },
          "MuiInputLabel": Object {
            "formControl": Object {
              "marginTop": "-4px",
              "transform": "none",
            },
            "shrink": Object {
              "marginTop": "-4px",
              "transform": "none",
            },
          },
          "MuiListItem": Object {
            "button": Object {
              "&:hover": Object {
                "backgroundColor": "rgba(0, 0, 0, 0.04)",
              },
            },
            "gutters": Object {
              "&:focus": Object {
                "outline": "none",
              },
            },
            "root": Object {
              "&$selected": Object {
                "&:focus": Object {
                  "outline": "none",
                },
                "&:hover": Object {
                  "backgroundColor": "rgba(0, 0, 0, 0.04)",
                },
                "backgroundColor": "rgba(255, 107, 11, 0.16)",
              },
              "&.Mui-disabled": Object {
                "opacity": 0.32,
              },
              "&:hover": Object {
                "backgroundColor": "rgba(0, 0, 0, 0.04)",
              },
              "cursor": "pointer",
            },
          },
          "MuiSelect": Object {
            "select": Object {
              "&.Mui-disabled": Object {
                "color": "#BBBBBB",
              },
              "&:focus": Object {
                "backgroundColor": "transparent",
              },
            },
          },
          "MuiTab": Object {
            "root": Object {
              "&$disabled": Object {
                "opacity": 0.24,
              },
            },
            "textColorInherit": Object {
              "&$disabled": Object {
                "opacity": 0.24,
              },
            },
            "wrapper": Object {
              "& > *:first-child": Object {
                "marginBottom": "2px !important",
              },
            },
          },
          "MuiTextField": Object {
            "& .MuiInputLabel": Object {
              "marginTop": "20px",
            },
          },
          "MuiToolbar": Object {
            "dense": Object {
              "@media (min-width: 600px)": Object {
                "minHeight": "56px",
              },
              "minHeight": "56px",
            },
            "gutters": Object {
              "@media (min-width: 600px)": Object {
                "padding": "0 16px",
              },
              "padding": "0 16px",
            },
            "regular": Object {
              "@media (min-width: 600px)": Object {
                "minHeight": "56px",
              },
              "minHeight": "56px",
            },
            "root": Object {
              "@media (min-width: 600px)": Object {
                "padding": "0 16px",
              },
              "padding": "0 16px",
            },
          },
        },
        "palette": Object {
          "action": Object {
            "active": "rgba(0, 0, 0, 0.54)",
            "disabled": "rgba(51, 51, 51, 0.24)",
            "disabledBackground": "rgba(0, 0, 0, 0.12)",
            "hover": "rgba(0, 0, 0, 0.08)",
            "hoverOpacity": 0.08,
            "selected": "rgba(0, 0, 0, 0.14)",
          },
          "augmentColor": [Function],
          "background": Object {
            "default": "#FAFAFA",
            "defaultContrastText": "#333333",
            "paper": "#FFFFFF",
            "paperContrastText": "#333333",
          },
          "common": Object {
            "black": "#000",
            "white": "#fff",
          },
          "complementary": Object {
            "highlight": "#000000",
            "link": "#227BBD",
            "linkContrastText": "#FFFFFF",
            "warning": "#FCC433",
            "warningContrastText": "#333333",
          },
          "contrastThreshold": 3,
          "divider": "rgba(0, 0, 0, 0.12)",
          "error": Object {
            "contrastText": "#FFFFFF",
            "dark": "rgb(161, 49, 27)",
            "light": "rgb(235, 107, 82)",
            "main": "#E74627",
          },
          "getContrastText": [Function],
          "grey": Object {
            "100": "#f5f5f5",
            "200": "#eeeeee",
            "300": "#e0e0e0",
            "400": "#bdbdbd",
            "50": "#fafafa",
            "500": "#9e9e9e",
            "600": "#757575",
            "700": "#616161",
            "800": "#424242",
            "900": "#212121",
            "A100": "#d5d5d5",
            "A200": "#aaaaaa",
            "A400": "#303030",
            "A700": "#616161",
          },
          "info": Object {
            "contrastText": "#fff",
            "dark": "#1976d2",
            "light": "#64b5f6",
            "main": "#2196f3",
          },
          "primary": Object {
            "contrastText": "#333333",
            "dark": "#EF8426",
            "light": "#FEFDE8",
            "main": "#F4AB34",
          },
          "secondary": Object {
            "contrastText": "#000000",
            "dark": "#FF5808",
            "light": "#FFF8E1",
            "main": "#FF6B0B",
          },
          "success": Object {
            "contrastText": "#FFFFFF",
            "dark": "rgb(60, 107, 35)",
            "light": "rgb(119, 174, 91)",
            "main": "#569A32",
          },
          "text": Object {
            "disabled": "#BBBBBB",
            "hint": "#BBBBBB",
            "primary": "#333333",
            "secondary": "#777777",
          },
          "tonalOffset": 0.2,
          "type": "light",
          "warning": Object {
            "contrastText": "rgba(0, 0, 0, 0.87)",
            "dark": "#f57c00",
            "light": "#ffb74d",
            "main": "#ff9800",
          },
        },
        "props": Object {},
        "shadows": Array [
          "none",
          "0 1px 1px 0 rgba(0, 0, 0, 0.14)",
          "0 2px 2px 0 rgba(0, 0, 0, 0.14)",
          "0 3px 4px 0 rgba(0, 0, 0, 0.14)",
          "0 4px 5px 0 rgba(0, 0, 0, 0.14)",
          "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
          "0 6px 10px 0 rgba(0, 0, 0, 0.14)",
          "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
          "0 8px 10px 0 rgba(0, 0, 0, 0.14)",
          "0 9px 12px 0 rgba(0, 0, 0, 0.14)",
          "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
          "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
          "0 12px 17px 0 rgba(0, 0, 0, 0.14)",
          "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
          "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
          "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
          "0 16px 24px 0 rgba(0, 0, 0, 0.14)",
          "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
          "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
          "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
          "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
          "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
          "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
          "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
          "0 24px 38px 0 rgba(0, 0, 0, 0.14)",
        ],
        "shape": Object {
          "badgeBorderRadius": 100,
          "borderRadius": 4,
        },
        "sizes": Object {
          "huge": 96,
          "hugex": 128,
          "hugexx": 144,
          "hugexxx": 192,
          "large": 64,
          "largex": 72,
          "largexx": 80,
          "largexxx": 88,
          "medium": 48,
          "mediumx": 56,
          "micro": 4,
          "none": 0,
          "semi": 32,
          "semix": 40,
          "small": 16,
          "standard": 24,
          "tiny": 8,
          "veryhuge": 256,
        },
        "spacing": [Function],
        "transitions": Object {
          "create": [Function],
          "duration": Object {
            "complex": 375,
            "enteringScreen": 225,
            "leavingScreen": 195,
            "short": 250,
            "shorter": 200,
            "shortest": 150,
            "standard": 300,
          },
          "easing": Object {
            "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
            "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
            "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
            "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
          },
          "getAutoHeightDuration": [Function],
        },
        "typography": Object {
          "body1": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
            "lineHeight": 1.5,
          },
          "body2": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "0.875rem",
            "fontWeight": 400,
            "lineHeight": 1.43,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "0.875rem",
            "fontWeight": 600,
            "lineHeight": 1.75,
            "textTransform": "uppercase",
          },
          "caption": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "0.75rem",
            "fontWeight": 400,
            "lineHeight": 1.66,
          },
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontSize": 14,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
          "h1": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "6rem",
            "fontWeight": 300,
            "lineHeight": 1.167,
          },
          "h2": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "3.75rem",
            "fontWeight": 300,
            "lineHeight": 1.2,
          },
          "h3": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "3rem",
            "fontWeight": 400,
            "lineHeight": 1.167,
          },
          "h4": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "2.125rem",
            "fontWeight": 400,
            "lineHeight": 1.235,
          },
          "h5": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1.5rem",
            "fontWeight": 400,
            "lineHeight": 1.334,
          },
          "h6": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1.25rem",
            "fontWeight": 600,
            "lineHeight": 1.6,
          },
          "htmlFontSize": 16,
          "overline": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "0.75rem",
            "fontWeight": 400,
            "lineHeight": 2.66,
            "textTransform": "uppercase",
          },
          "pxToRem": [Function],
          "round": [Function],
          "subtitle1": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
            "lineHeight": 1.75,
          },
          "subtitle2": Object {
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "0.875rem",
            "fontWeight": 500,
            "lineHeight": 1.57,
          },
        },
        "zIndex": Object {
          "appBar": 1100,
          "drawer": 1200,
          "mobileStepper": 1000,
          "modal": 1300,
          "snackbar": 1400,
          "speedDial": 1050,
          "tooltip": 1500,
        },
      }
    }
  >
    some_text
  </div>
</div>
`;

exports[`DrawerHeader component should match snapshot - DrawerHeader Custom children: DrawerHeader with Custom children snapshot 1`] = `
<div
  className="sc-bdVaJa jDYmUm"
>
  <div>
    some custom children
  </div>
</div>
`;

exports[`DrawerHeader component should match snapshot - DrawerHeader Subtitle: DrawerHeader with Subtitle snapshot 1`] = `
<div
  className="sc-bdVaJa jDYmUm"
>
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
  >
    some_title
  </h6>
</div>
`;

exports[`DrawerHeader component should match snapshot - DrawerHeader Title: DrawerHeader with Title snapshot 1`] = `
<div
  className="sc-bdVaJa jDYmUm"
>
  <h5
    className="MuiTypography-root MuiTypography-h5"
  >
    some_title
  </h5>
</div>
`;
